# nvm-desktop-rust

./: .gitignore  .taurignore  README.md  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  output.ext  project.db  setting.json  tauri.conf.json  version.sqlite3
src-tauri/src/: cmd.rs  folder.rs  lib.rs  log.rs  main.rs  project.rs  uzip.rs  version.rs
src-tauri/src/dots/: project.rs
src-tauri/src/handlers/: project.rs
src-tauri/src/modules/os/: mod.rs  system_info.rs
src-tauri/src/modules/os/cmd/: mod.rs
src-tauri/src/modules/os/cmd/windows/: cmd.rs
src-tauri/src/modules/os/ide/: mod.rs
src-tauri/src/modules/os/ide/unix/: open_vscode.rs
src-tauri/src/modules/os/ide/windows/: mod.rs  open_vscode.rs
src/components/DropdownMenu/: DropdownMenu.tsx  index.ts  types.ts
src/components/Layout/: MainLayout.tsx  MainToolBar.tsx
src/components/Layout/types/: index.ts
src/contexts/: PageContext.ts  index.ts
src/locales/: en.ts  index.tsx  zh.ts
src/pages/: inedx.ts
src/pages/LogSelect/: LogSelect.tsx  index.ts  types.ts
src/pages/ProjectFrom/: ProjectFrom.tsx  index.ts  types.ts
src/pages/Projects/: MoreMenu.tsx  ProjectAdd.tsx  ProjectList.tsx  index.ts  types.ts
src/pages/Versions/: VersionList.tsx  index.ts  types.ts
src/types/: PageContext.ts  index.ts
