[package]
name = "nvm-desktop-rust"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.10", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10.3"
sysinfo = "0.30.5"
zip = "0.6"
symlink = "0.1.0"
lazy_static = "1.4.0"
rusqlite = { version = "=0.30.0", features = ["bundled"] }
async-executor = "1.8.0"
chrono = "0.4.34"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
